# chatgpt-conversations-to-markdown

./: .gitignore  README.md  main.py  pyproject.toml
chatgpt_conversations/: __init__.py  chatgpt_json_to_markdown.py
chatgpt_obsidian_import/: __init__.py  chatgpt_json_to_markdown.py  import.py
example/: Syncing ChatGPT with Obsidian.md  conversations-one.json
