[tool.poetry]
name = "chatgpt-obsidian-import"
version = "0.1.0"
description = ""
authors = ["Richard Bellamy <rbellamy@nuvalence.io>"]
readme = "README.md"
include = ["./example", "main.py"]
packages = [{include = "chatgpt_conversations"}]

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.1"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
